<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Copyright 2015 Qualcomm Technologies International, Ltd.                                      ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.csr.gaiacontrol.fragments.ConnectionFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/no_padding"
        android:layout_marginBottom="@dimen/margin_vertical">

        <!-- Title for the device selection -->
        <TextView
            android:id="@+id/tv_select_device"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            style="@style/AppTheme.Title.Connection"
            android:text="@string/select_device" />

        <!-- button to validate the selection -->
        <Button
            android:id="@+id/bt_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/start"
            style="@style/AppTheme.Button.Flat"
            android:enabled="false"
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:layout_marginStart="@dimen/margin_horizontal" />

        <!-- List of devices -->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_devices_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/bt_start"
            android:layout_below="@id/tv_select_device"
            android:scrollbars="vertical"
            android:layout_marginBottom="@dimen/margin_top_title"
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:layout_marginStart="@dimen/margin_horizontal" />

        <TextView
            android:id="@+id/tv_no_available_device"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="64dp"
            android:paddingEnd="64dp"
            android:text="@string/connect_no_available_device"
            android:layout_above="@id/bt_start"
            android:layout_below="@id/tv_select_device"
            android:gravity="center_vertical"
            android:textSize="@dimen/text_size_no_available_file"
            android:textAlignment="center"
            android:layout_marginEnd="@dimen/margin_horizontal"
            android:layout_marginStart="@dimen/margin_horizontal"/>

    </RelativeLayout>

    <include
        layout="@layout/layout_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true" />

</RelativeLayout>
