<?xml version="1.0" encoding="utf-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Copyright 2015 Qualcomm Technologies International, Ltd.                                      ~
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_dialog">

    <TextView
        android:id="@+id/tv_update_title"
        style="@style/AppTheme.Text.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/material_margin_bottom_dialogs_title" />

    <TextView
        android:id="@+id/tv_step"
        style="@style/AppTheme.Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_vertical"
        android:textColor="@color/secondary_text"
        android:textSize="@dimen/text_size_update_step" />

    <LinearLayout
        android:id="@+id/ll_transfer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_vertical"
        android:orientation="horizontal"
        android:visibility="gone"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_percentage"
            style="@style/AppTheme.Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textStart"
            android:textColor="@color/secondary_text"/>

        <TextView
            android:id="@+id/tv_time"
            style="@style/AppTheme.Text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:textColor="@color/secondary_text" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_time"
            android:contentDescription="@string/empty_content_description" />

    </LinearLayout>

    <!-- the determinate progress bar to see the update evolution -->
    <include layout="@layout/progressbar_update" />

    <!-- the indeterminate progress bar to see indeterminate events -->
    <ProgressBar
        android:id="@+id/pb_update_indeterminate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:layout_marginBottom="@dimen/margin_vertical"
        android:indeterminate="true" />

    <!-- The general error message -->
    <RelativeLayout
        android:id="@+id/rl_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/iv_warning"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_alert_warning"
            android:contentDescription="@string/empty_content_description" />

        <TextView
            android:layout_toEndOf="@id/iv_warning"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/tv_update_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_vertical"
            android:text="@string/update_error"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/tv_update_error_from_board"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_vertical"
            android:layout_below="@id/tv_update_error"
            android:layout_toEndOf="@id/iv_warning"
            android:layout_alignParentEnd="true"
            android:text="@string/update_error_from_board"
            android:textColor="@color/colorAccent" />

        <!-- The message to display the error code -->
        <TextView
            android:id="@+id/tv_update_error_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_dialog_text_bullets"
            android:layout_marginTop="@dimen/margin_vertical"
            android:layout_below="@id/tv_update_error_from_board"
            android:layout_toEndOf="@id/iv_warning"
            android:layout_alignParentEnd="true"
            android:textColor="@color/colorAccent" />

        <!-- The message to display the message code -->
        <TextView
            android:id="@+id/tv_update_error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_start_dialog_text_bullets"
            android:layout_marginTop="@dimen/margin_vertical"
            android:layout_below="@id/tv_update_error_code"
            android:layout_toEndOf="@id/iv_warning"
            android:layout_alignParentEnd="true"
            android:textColor="@color/colorAccent" />
        <!-- android:text="&#8226; Error message: Update failed" -->

    </RelativeLayout>

</LinearLayout>